[package]
name = "postgres-ssl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
openssl = "0.10.38"
postgres-openssl = "0.5.0"
serde = { version = "1.0.132", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
tokio-postgres = "0.7.5"
